1.19.2 part 1