@@ -1,5 +1,6 @@
 package dev.mrsterner.bewitchmentplus.common;
 
+import eu.midnightdust.lib.config.MidnightConfig;
 import me.shedaniel.autoconfig.ConfigData;
 import me.shedaniel.autoconfig.annotation.Config;
 import me.shedaniel.autoconfig.annotation.ConfigEntry;
@@ -10,54 +11,30 @@ import net.minecraft.world.biome.Biome;
 import java.util.Arrays;
 import java.util.List;
 
-@Config(name = BewitchmentPlus.MODID)
-public class BWPConfig implements ConfigData {
-
-	@ConfigEntry.Gui.CollapsibleObject
-	public Entities entities = new Entities();
-
-	@ConfigEntry.Gui.CollapsibleObject
-	public World world = new World();
-
-	@ConfigEntry.Gui.CollapsibleObject
-	public Mechanics mechanics = new Mechanics();
+public class BWPConfig extends MidnightConfig {
 
 
 
-	public static class Entities {
-		public final List<String> blackDogBiomeCategories = Arrays.asList(ConventionalBiomeTags.PLAINS.toString());
-		public final int blackDogWeight = 8;
-		public final int blackDogMinGroupCount = 0;
-		public final int blackDogMaxGroupCount = 2;
+	@Entry public static List<String> blackDogBiomeCategories = List.of(ConventionalBiomeTags.PLAINS.toString());
+	@Entry public static int blackDogWeight = 8;
+	@Entry	public static int blackDogMinGroupCount = 0;
+	@Entry	public static int blackDogMaxGroupCount = 2;
 
-		public final List<String> cambionBiomeCategories = Arrays.asList(ConventionalBiomeTags.IN_NETHER.toString(), ConventionalBiomeTags.DESERT.toString());
-		public final int cambionWeight = 12;
-		public final int cambionMinGroupCount = 0;
-		public final int cambionMaxGroupCount = 2;
-	}
+	@Entry	public static List<String> cambionBiomeCategories = Arrays.asList(ConventionalBiomeTags.IN_NETHER.toString(), ConventionalBiomeTags.DESERT.toString());
+	@Entry	public static int cambionWeight = 12;
+	@Entry	public static int cambionMinGroupCount = 0;
+	@Entry	public static int cambionMaxGroupCount = 2;
 
 
-	public static class World {
-		public final boolean blackDogStructureSpawn = true;
-		public final boolean cambionVillageStructureSpawn = true;
+	@Entry	public static boolean blackDogStructureSpawn = true;
+	@Entry	public static boolean cambionVillageStructureSpawn = true;
+	@Entry	public static int yewTreeWeight = 10;
+	@Entry  public static float lotusTreeWeight = 50;
 
-		@ConfigEntry.Gui.Tooltip
-		@ConfigEntry.BoundedDiscrete(max = 100, min = 1)
-		public final int yewTreeWeight = 10;
-		@ConfigEntry.Gui.Tooltip
-		@ConfigEntry.BoundedDiscrete(max = 100, min = 1)
-        public float lotusTreeWeight = 50;
-    }
 
-	public static class Mechanics {
+	@Entry	public static boolean allowGetVampBloodFromGobletAndAthame = false;
 
-		@ConfigEntry.Gui.RequiresRestart
-		@ConfigEntry.Gui.Tooltip
-		public final boolean allowGetVampBloodFromGobletAndAthame = false;
+	@Entry	public static boolean allowSummoningPlayersWithDeathGearInsteadOfDeath = false;
 
-		@ConfigEntry.Gui.RequiresRestart
-		@ConfigEntry.Gui.Tooltip
-		public final boolean allowSummoningPlayersWithDeathGearInsteadOfDeath = false;
-	}
 
 }
